# 5g-small-cell-monitoring-agent

./: .gitignore  CMakeLists.txt  DEMO.md  Dockerfile  PROFESSIONAL_DEMO.html  README.md  UPGRADE_NOTES.md  conftest.py  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
config/: agent_config.json  degraded_config.json
docker/: Dockerfile
include/: common.h
k8s/: deployment.yaml  service.yaml
scripts/: run_agent.sh  simulate_5g_metrics.py  ssh_health_check.py
src/: agent_loop.cpp  agent_loop.h  firmware_stub.h  logger.cpp  logger.h  main.cpp  metrics_collector.cpp  metrics_collector.h  network_monitor.cpp  network_monitor.h  ssh_diagnostics.cpp  ssh_diagnostics.h
test_cpp/: test_agent_loop.cpp  test_network_monitor.cpp  test_network_monitor_gtest.cpp
tests/: test_metrics.py  test_network_parser.py
